# Loca

./: .gitignore  LICENSE  Loca.md  README.md  loca_rules.md  mikan_loop.py  mikan_output.py  pyproject.toml
docs/: README_en.md  README_ja.md
loca_tools/: get_time.py
src/loca/: config.py  main.py
src/loca/core/: agent_session.py  executor.py  llm_client.py  memory.py  pro_agent.py  prompts.py  router.py  tool_registry.py
src/loca/tools/: backup.py  commander.py  file_ops.py  git_ops.py  ipc_manager.py  plugin_loader.py  web_search.py
src/loca/ui/: display.py  header.py
