[tool.uv]
package = true
[project]
name = "Loca"
version = "0.1.0"
description = "Autonomous CLI agent app (Loca) using LiteLLM and Rich"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.81.13",
    "ollama",
    "rich",
    "prompt-toolkit>=3.0.52",
    "ddgs>=9.10.0",
    "ruff>=0.9.0",
]

[project.scripts]
loca = "loca.main:cli"
